# vd17-data-pipeline

./: .gitmodules  .pre-commit-config.yaml  Makefile  pyproject.toml
code/: create-db.py  fetch-dataset.py  fetch-pica3.py  run-sql.py
code/R/: gender.Rmd  gender.nb.html
code/sql/: create_user.sql  create_vd17_auth.sql  table_a.sql  table_c.sql
src/: create-db.py  fetch-auths.py  fetch-dataset.py  run-sql.py
src/sql/: auth_record_number_to_gnd_id.sql  create_user.sql  create_vd17_auth.sql  record_number_to_vd17_id.sql  table_a.sql  table_c.sql
