[tool.poetry]
name = "vd17-data-pipeline"
version = "0.1.0"
description = ""
authors = ["Eetu Mäkelä <eetu.makela@iki.fi>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
marcxml2csv = "^1.0.3"
requests = "^2.27.1"
PyMySQL = "^1.0.2"
mdbutil = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
