[project]
name = "vd17-data-pipeline"
description = "A data pipeline for processing VD17 data"
version = "0.1.0"
authors = [
    {name = "Eetu Mäkelä", email = "eetu.makela@helsinki.fi"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "marcxml2csv<2.0.0,>=1.0.5",
    "requests<3.0.0,>=2.27.1",
    "PyMySQL<2.0.0,>=1.0.2",
    "mdbutil<1.0.0,>=0.1.3",
    "aiohttp<4.0.0,>=3.8.4",
    "click>=8.1.7",
]
