[project]
name = "vd17-data-pipeline"
description = "A data pipeline for processing VD17 data"
version = "0.1.0"
authors = [
    {name = "Eetu Mäkelä", email = "eetu.makela@helsinki.fi"},
]
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "marcxml2csv>=1.0.5",
    "requests>=2.32.3",
    "PyMySQL>=1.1.1",
    "mdbutil>=0.1.4",
    "aiohttp>=3.11.10",
    "click>=8.1.7",
    "more-itertools>=10.5.0",
]
